vlib/v/checker/tests/fn_duplicate.vv
fn f() {
}

fn f(i int) {
}
